Add custom fuzzy matcher to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,8 @@ time = "0.1.38"
 clap = "2.26.2"
 tuikit = "0.2.9"
 vte = "0.3.3"
-fuzzy-matcher = "0.2.1"
+#fuzzy-matcher = "0.2.1"
+fuzzy-matcher = { git = "https://github.com/smheidrich/fuzzy-matcher", branch="for_skim_unicode" }
 rayon = "1.0.3"
 derive_builder = "0.7.1"
 bitflags = "1.0.4"
